# instant-akismet

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: rust-ci.yml
src/: lib.rs
