[package]
name = "instant-akismet"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "Rust client for Akismet spam protection"
homepage = "https://github.com/InstantDomain/instant-akismet"
repository = "https://github.com/InstantDomain/instant-akismet"
documentation = "https://docs.rs/instant-akismet"
keywords = ["akismet", "api", "spam", "detection"]
categories = ["api-bindings", "web-programming"]

[dependencies]
chrono = { version= "0.4.19", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
serde_qs = "0.11"
thiserror = "1.0.21"
tokio = { version = "1.1.1", features = ["macros"] }
