[package]
name = "instant-akismet"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust client for Akismet spam protection"
homepage = "https://github.com/djc/instant-akismet"
repository = "https://github.com/djc/instant-akismet"
documentation = "https://docs.rs/instant-akismet"
keywords = ["akismet", "api", "spam", "detection"]
categories = ["api-bindings", "web-programming"]

[dependencies]
chrono = { version= "0.4.19", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["default-tls", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
serde_qs = "0.15"
thiserror = "2.0.3"
tokio = { version = "1.1.1", features = ["macros"] }
